FullQa New/src/PS Enterprise/objects/VersionItem_Phase__c.object
<CustomObject>
    <customHelpPage>VersionHelp</customHelpPage>
    <description>A capture of a project phase taken at the time the version is created.</description>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>The description for the phase referenced in the version.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>The end date for the phase referenced in the version.</description>
        <inlineHelpText>The end date for the phase referenced in the version.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OriginalCreatedById__c</fullName>
        <inlineHelpText>The created by user ID for the phase referenced in the version.</inlineHelpText>
        <label>Original Created By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalCreatedByName__c</fullName>
        <inlineHelpText>The created by user name for the phase referenced in the version.</inlineHelpText>
        <label>Original Created By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalCreatedDate__c</fullName>
        <description>The original created date for the phase referenced in the version.</description>
        <inlineHelpText>The original created date for the phase referenced in the version.</inlineHelpText>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OriginalId__c</fullName>
        <description>The original ID of the phase referenced in the version.</description>
        <inlineHelpText>The original ID of the phase referenced in the version.</inlineHelpText>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalLastModifiedById__c</fullName>
        <inlineHelpText>The modified by user ID for the phase referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalLastModifiedByName__c</fullName>
        <inlineHelpText>The modified by user name for the phase referenced in the version.</inlineHelpText>
        <label>Original Last Modified By Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalLastModifiedDate__c</fullName>
        <description>The original last modified date of the phase referenced in the version.</description>
        <inlineHelpText>The original last modified date of the phase referenced in the version.</inlineHelpText>
        <label>Original Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OriginalOwnerId__c</fullName>
        <inlineHelpText>The owner ID for the phase referenced in the version.</inlineHelpText>
        <label>Original Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalOwnerName__c</fullName>
        <inlineHelpText>The owner name for the phase referenced in the version.</inlineHelpText>
        <label>Original Owner Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectPhaseName__c</fullName>
        <description>The project phase name referenced in the version.</description>
        <inlineHelpText>The project phase name referenced in the version.</inlineHelpText>
        <label>Project Phase Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The start date and time for the phase referenced in the version.</description>
        <inlineHelpText>The start date and time for the phase referenced in the version.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>A lookup to the Version.</description>
        <inlineHelpText>A lookup to the Version.</inlineHelpText>
        <label>Version</label>
        <referenceTo>Version__c</referenceTo>
        <relationshipLabel>Version Item Phases</relationshipLabel>
        <relationshipName>VersionItem_Phases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Version Item Phase</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PVP-{0000}</displayFormat>
        <label>Version Item Phase Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>